Cargando Experiencia laboral

--- a/index.html
+++ b/index.html
@@ -196,26 +196,26 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Experiencia Profesional</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Analista Programador .NET - SES</h4>
+              <h5>2023 - Present</h5>
+              <p><em>Cercado de Lima - Lima - Lima, Perú </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Análisis y corrección de incidencias o bugs en aplicativos web.</li>
+                <li>Análisis y construcción de nuevos módulos para nuevas funcionalidades en los aplicativos existentes.</li>
+                <li>Análisis de base de datos Microsoft SQL Server, para modificacion segun nuevos modulos creados.</li>
+                <li>Análisis de programas Genexus y AS400</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Programador de software .Net - Fraro Eirl</h4>
+              <h5>2016 - 2022</h5>
+              <p><em>Surco - Lima - Lima, Perú</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Migración de aplicativo en FoxPro a nuevo aplicativo en VB.Net</li>
+                <li>Migración de base de datos en MDF a Microsoft SQL Server</li>
+                <li>Configuración de red para servidor</li>
+                <li>Mantenimiento de equipos computacionales</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
