Imagen de fondo testimonials-bg.png modificada

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section dark-background">
 
-      <img src="assets/img/testimonials-bg.jpg" class="testimonials-bg" alt="">
+      <img src="assets/img/testimonials-bg.png" class="testimonials-bg" alt="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
